crates/peach_app/src/snapshots/peach_app__operation__tests__fs_read_with_truncation_path.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<file
  path="/home/user/large_file.txt"
  display_lines="1-100"
  total_lines="200"
><![CDATA[1:Truncated content]]>
<truncated>100 more lines not shown. Full output: read /home/user/large_file.txt with start_line=101 to continue from where this left off.</truncated>
</file>
