crates/peach_app/src/snapshots/peach_app__operation__tests__fs_search_case_insensitive.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="256000"
  total_lines="3"
  display_lines="1-3"
  pattern="error"
><![CDATA[log.txt:10:ERROR: Connection failed
log.txt:15:error in processing
log.txt:20:Error: Invalid input]]>
</search_results>
