crates/peach_app/src/snapshots/peach_app__operation__tests__fs_search_no_matches.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/empty_project"
  pattern="nonexistent"
>
</search_results>
